--- a/src/sass/app_2/_common/form/input_field.scss
+++ b/src/sass/app_2/_common/form/input_field.scss
@@ -3,6 +3,11 @@
     margin: 8px 0 0;
     font-weight: 300;
 
+    & ~ [class*='__icon'] {
+        @extend .absolute-center-v; // centers input-field icons vertically
+        top: 8px;
+        right: 5%;
+    }
     i {
         position: relative;
 
